test_regress/t/t_fuzz_genintf_bad.out
%Error-UNSUPPORTED: t/t_fuzz_genintf_bad.v:24:12: Unsupported: Member call on object 'VARREF 'j'' which is a 'BASICDTYPE 'integer''
                                                : ... In instance t
   24 |          j.e(0),
      |            ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Internal Error: t/t_fuzz_genintf_bad.v:24:11: ../V3Width.cpp:#: Unlinked pin data type
                                                    : ... In instance t
   24 |          j.e(0),
      |           ^
                        ... See the manual at https://verilator.org/verilator_doc.html for more assistance.
